--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "${VITE_SENSOR_01_API_URL}/$1",
+      "src": "/api/data",
+      "dest": "${VITE_SENSOR_01_API_URL}",
       "methods": ["GET"]
     }
   ]
