--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "src": "/api/data",
+      "src": "/api/data//(.*)",
       "dest": "${VITE_SENSOR_01_API_URL}",
       "methods": ["GET"]
     }
