--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "${VITE_SENSOR_01_API_URL}/$1",
+      "dest": "${process.env.VITE_SENSOR_01_API_URL}/$1",
       "methods": ["GET"]
     }
   ]
