--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "http://192.168.0.115:80/api/$1",
+      "src": "/api/data",
+      "dest": "http://192.168.0.115:80/api/data",
       "methods": ["GET"]
     }
   ]
