--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ably": "^1.2.48",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "prop-types": "^15.8.1",
